src/test/deca/syntax/valid/provided/comment.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 01/01/2024

{    
        int x=0 ;
 
}
